--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
+# Node
+node_modules/
+npm-debug.log
+yarn-error.log
+
 # OSX
-#
 .DS_Store
 
 # Xcode
-#
 build/
 *.pbxuser
 !default.pbxuser
@@ -20,10 +23,9 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
-**/.xcode.env.local
+project.xcworkspace
 
 # Android/IntelliJ
-#
 build/
 .idea
 .gradle
@@ -33,43 +35,25 @@ local.properties
 .cxx/
 *.keystore
 !debug.keystore
-.kotlin/
 
-# node.js
-#
-node_modules/
-npm-debug.log
-yarn-error.log
+# BUCK
+buck-out/
+\.buckd/
+*.keystore
+!debug.keystore
 
-# fastlane
-#
-# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
-# screenshots whenever they are needed.
-# For more information about the recommended setup visit:
-# https://docs.fastlane.tools/best-practices/source-control/
-
-**/fastlane/report.xml
-**/fastlane/Preview.html
-**/fastlane/screenshots
-**/fastlane/test_output
-
-# Bundle artifact
+# Bundle artifacts
 *.jsbundle
 
-# Ruby / CocoaPods
-**/Pods/
-/vendor/bundle/
+# CocoaPods
+ios/Pods/
 
-# Temporary files created by Metro to check the health of the file watcher
-.metro-health-check*
+# Temporary files
+*.swp
+*.swo
+*~
+.tmp/
 
-# testing
-/coverage
-
-# Yarn
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+# Expo
+.expo/
+dist/
