Feature: Automatic LLM download on first start
- Added ModelDownloadService for automatic TinyLlama 1.1B download
- Updated LLMService to use auto-downloaded model
- Added download progress dialog in HomeScreen
- Updated documentation (README, SETUP_MAC)
- Added react-native-fs dependency for file management
- No manual model setup required - works out of the box!
- Fallback to simple structuring if download fails

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "llama.rn": "^0.11.1",
     "react": "19.2.3",
     "react-native": "0.84.0",
+    "react-native-fs": "^2.20.0",
     "react-native-paper": "^5.15.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-vector-icons": "^10.3.0"
